--- a/src/css/Dropdown.css
+++ b/src/css/Dropdown.css
@@ -47,3 +47,21 @@
   align-items: center;
   justify-content: center;
 }
+
+.dropdown li {
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.dropdown li img {
+  object-fit: contain;
+  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.5));
+}
+
+.dropdown li span {
+  font-size: 0.9rem;
+  color: #fff;
+}
