--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -67,20 +67,19 @@
 
 /* THE ANIMATED ORB */
 .loader {
-  --color-one: #ff00ff; /* Mega Pink */
-  --color-two: #00ffff; /* Mega Cyan */
-  --color-three: #ffff00; /* Yellow highlights */
-  --color-fore: #ffffff;
-  --color-five: #ffffff;
-  --time-animation: 1.5s;
-  --size: 150px;
+  --color-one: red;
+  --color-two: blue;
+  --color-three: yellow;
+  --color-fore: cyan;
+  --color-five: white;
+  --time-animation: 1s;
+  --size: 100px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   border-radius: 50%;
-  box-shadow: 0 0 50px rgba(255, 0, 255, 0.2);
 }
 
 .loader .sphere {
@@ -103,6 +102,9 @@
 .loader .sphere::before {
   content: '';
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: var(--size);
   height: var(--size);
   border-radius: 50%;
@@ -118,6 +120,9 @@
 .loader .sphere::after {
   content: '';
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: var(--size);
   height: var(--size);
   border-radius: 50%;
@@ -137,14 +142,51 @@
 
 .loader svg {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: var(--size);
   height: var(--size);
   animation: rotation calc(var(--time-animation) * 3)
     cubic-bezier(0.7, 0.6, 0.3, 0.4) infinite;
-  color: white; /* Shapes inside the SVG will be white */
 }
 
-/* Original Keyframes */
+.loader svg #shapes circle {
+  fill: var(--color-five);
+}
+
+.loader svg #blurriness g,
+.loader svg #clipping ellipse,
+.loader svg #shapes g:nth-of-type(2),
+.loader svg #fade ellipse {
+  filter: blur(7px);
+}
+
+.loader svg #waves g path {
+  will-change: d;
+  stroke-width: 7px;
+}
+
+.loader svg #waves g path:nth-of-type(1) {
+  animation: wave-one var(--time-animation) cubic-bezier(0.7, 0.6, 0.3, 0.4)
+    infinite;
+}
+
+.loader svg #waves g path:nth-of-type(2) {
+  animation: wave-two var(--time-animation) cubic-bezier(0.7, 0.6, 0.3, 0.4)
+    calc(var(--time-animation) / -2) infinite reverse;
+}
+
+.loader svg #waves g path:nth-of-type(3) {
+  animation: wave-one var(--time-animation) cubic-bezier(0.7, 0.6, 0.3, 0.4)
+    calc(var(--time-animation) / -2) infinite;
+}
+
+.loader svg #waves g path:nth-of-type(4) {
+  animation: wave-two var(--time-animation) cubic-bezier(0.7, 0.6, 0.3, 0.4)
+    infinite reverse;
+}
+
 @keyframes wave-one {
   0% {
     d: path('M5,50 C10,50 15,50 20,50 C25,50 30,50 95,50');
@@ -170,42 +212,53 @@
 }
 
 @keyframes rotation {
-  from {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
 
 @keyframes colorize {
-  0%,
-  100% {
+  0% {
     filter: hue-rotate(0deg);
   }
-  50% {
-    filter: hue-rotate(180deg);
+  20% {
+    filter: hue-rotate(-30deg);
+  }
+  40% {
+    filter: hue-rotate(-60deg);
+  }
+  60% {
+    filter: hue-rotate(-90deg);
+  }
+  80% {
+    filter: hue-rotate(-45deg);
+  }
+  100% {
+    filter: hue-rotate(0deg);
   }
 }
 
 @keyframes colorblur {
-  0%,
-  100% {
+  0% {
     filter: hue-rotate(0deg) blur(calc(var(--size) / 15));
   }
-  50% {
-    filter: hue-rotate(180deg) blur(calc(var(--size) / 10));
+  20% {
+    filter: hue-rotate(-30deg) blur(calc(var(--size) / 15));
   }
-}
-
-@keyframes burst {
-  from {
-    opacity: 0;
-    transform: scale(0.5);
+  40% {
+    filter: hue-rotate(-60deg) blur(calc(var(--size) / 15));
   }
-  to {
-    opacity: 1;
-    transform: scale(1);
+  60% {
+    filter: hue-rotate(-90deg) blur(calc(var(--size) / 15));
+  }
+  80% {
+    filter: hue-rotate(-45deg) blur(calc(var(--size) / 15));
+  }
+  100% {
+    filter: hue-rotate(0deg) blur(calc(var(--size) / 15));
   }
 }
 
