--- a/src/css/PokemonSlot.css
+++ b/src/css/PokemonSlot.css
@@ -3,13 +3,19 @@
   border: 2px solid #333;
   border-radius: 6px;
   width: 100%;
-  height: 450px;
+  height: 100%;
   position: relative;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   overflow: visible;
+}
+
+.monstruct-card label {
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #333;
 }
 
 .close-btn {
