--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,12 @@
+@import './index.css';
+:root.cherish-mode {
+    --text-main: #ff4d4d;
+  --accent-color: #ff0000;
+  --secondary-accent: #8b0000;
+  --text-highlight: #ff0000;
+  --accent-glow: 0 0 20px rgba(255, 0, 0, 0.6);
+  --border-color: rgba(255, 0, 0, 0.2);
+}
 .app-container {
   max-width: 100%;
   overflow-x: hidden;
@@ -14,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: white;
+  background: transparent;
   border-bottom: 2px solid #ddd;
 }
 
@@ -129,7 +138,7 @@ img {
 .box {
   width: 100%;
   min-height: 100vh;
-  background-color: #121212;
+  background-color: transparent;
   margin: 0;
   padding: 0;
 }
@@ -147,7 +156,7 @@ img {
   justify-content: space-between;
   align-items: center;
   background: #1a1a1a;
-  border-bottom: 2px solid #00ffff;
+  border-bottom: 2px solid var(--accent-color);
 }
 
 .nav-left {
